--- a/app/less/style.less
+++ b/app/less/style.less
@@ -9,4 +9,4 @@
 @import "blocks/news.less";
 @import "blocks/reviews.less";
 @import "blocks/page-footer.less";
-@import "outlines.less"
+@import "outlines.less";
