--- a/app/css/style.css
+++ b/app/css/style.css
@@ -52,3 +52,11 @@ body {
     height: 400px;
   }
 }
+@media (min-width: 1200px) {
+  .page-header {
+    padding-bottom: 648px;
+  }
+  .page-header__logo {
+    height: 648px;
+  }
+}
