--- a/app/less/blocks/page-header.less
+++ b/app/less/blocks/page-header.less
@@ -25,5 +25,11 @@
 }
 
 @media @desktop-widths {
-  
+  .page-header {
+    padding-bottom: 648px;
+  }
+
+  .page-header__logo {
+    height: 648px;
+  }
 }
