--- a/app/css/style.css
+++ b/app/css/style.css
@@ -60,3 +60,59 @@ body {
     height: 648px;
   }
 }
+.main-nav {
+  width: 320px;
+  margin: 0 auto;
+  background-color: white;
+  /* Временно для сетки */
+}
+.main-nav__items,
+.main-nav__user-items {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+.main-nav__items {
+  min-height: 70px;
+  /* Временно для сетки */
+  background-color: black;
+  /* Временно для сетки */
+}
+.main-nav__user-items {
+  min-height: 70px;
+  /* Временно для сетки */
+  background-color: black;
+  /* Временно для сетки */
+}
+@media (min-width: 768px) {
+  .main-nav {
+    width: auto;
+    min-height: 70px;
+    margin: 0;
+  }
+  .main-nav__wrapper {
+    width: 320px;
+    margin: 0 auto;
+  }
+  .main-nav__wrapper::after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+  .main-nav__items {
+    float: left;
+    width: 570px;
+    min-height: 70px;
+    /* Временно для сетки */
+  }
+}
+@media (min-width: 768px) and (min-width: 768px) {
+  .main-nav__wrapper {
+    width: 640px;
+  }
+}
+@media (min-width: 768px) and (min-width: 1200px) {
+  .main-nav__wrapper {
+    width: 960px;
+  }
+}
