Новый файл advantages.less

--- a/app/less/blocks/main-nav.less
+++ b/app/less/blocks/main-nav.less
@@ -40,5 +40,19 @@
     min-height: 70px; /* Временно для сетки */
   }
 
-  .main-nav__user-items {}
+  .main-nav__user-items {
+    float: right;
+    width: 60px;
+    min-height: 70px; /* Временно для сетки */
+  }
+}
+
+@media @desktop-widths {
+  .main-nav__items {
+    width: 780px;
+  }
+
+  .main-nav__user-items {
+    width: 160px;
+  }
 }
