--- a/app/css/style.css
+++ b/app/css/style.css
@@ -105,6 +105,12 @@ body {
     min-height: 70px;
     /* Временно для сетки */
   }
+  .main-nav__user-items {
+    float: right;
+    width: 60px;
+    min-height: 70px;
+    /* Временно для сетки */
+  }
 }
 @media (min-width: 768px) and (min-width: 768px) {
   .main-nav__wrapper {
@@ -114,5 +120,177 @@ body {
 @media (min-width: 768px) and (min-width: 1200px) {
   .main-nav__wrapper {
     width: 960px;
+  }
+}
+@media (min-width: 1200px) {
+  .main-nav__items {
+    width: 780px;
+  }
+  .main-nav__user-items {
+    width: 160px;
+  }
+}
+.stats {
+  width: 320px;
+  margin: 0 auto;
+}
+@media (min-width: 768px) {
+  .stats {
+    width: 640px;
+  }
+}
+@media (min-width: 1200px) {
+  .stats {
+    width: 960px;
+  }
+}
+.stats__header {
+  min-height: 130px;
+  /* Временно для сетки */
+  background-color: yellow;
+  /* Временно для сетки */
+  padding: 27px 38px 26px 38px;
+}
+.stats__items {
+  width: 100%;
+  height: 320px;
+  /* Временно для сетки (таблица на min-height не реагирует, поэтому height) */
+  background-color: black;
+  /* Временно для сетки */
+}
+@media (min-width: 768px) {
+  .stats {
+    position: relative;
+    z-index: 1;
+    margin-top: -184px;
+  }
+  .stats__header {
+    padding: 0;
+    padding-top: 31px;
+    padding-bottom: 24px;
+  }
+  .stats__header::after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+  .stats__items {
+    display: block;
+  }
+  .stats__items::after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+}
+@media (min-width: 1200px) {
+  .stats {
+    margin-top: -159px;
+  }
+  .stats::after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+  .stats__header {
+    float: left;
+    width: 240px;
+    min-height: 263px;
+    /* Времено для сетки */
+    padding-left: 40px;
+    padding-right: 40px;
+  }
+  .stats__items {
+    float: left;
+    dispaly: block;
+    width: 640px;
+  }
+}
+.advantages__wrapper {
+  width: 320px;
+  margin: 0 auto;
+  min-height: 320px;
+  /* Временно для сетки */
+  padding-top: 30px;
+}
+@media (min-width: 768px) {
+  .advantages__wrapper {
+    width: 640px;
+  }
+}
+@media (min-width: 1200px) {
+  .advantages__wrapper {
+    width: 960px;
+  }
+}
+.advantages__items {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  background-color: orange;
+  /* Временно для сетки */
+}
+.advantages__item {
+  min-height: 145px;
+  /* Временно для сетки */
+  margin-bottom: 23px;
+  padding: 0 44px;
+  padding-top: 125px;
+  background-color: white;
+  /* Временно для сетки */
+}
+.advantages__item:nth-child(n+2) {
+  display: none;
+}
+@media (min-width: 768px) {
+  .advantages__wrapper {
+    padding-top: 42px;
+  }
+  .advantages__items {
+    padding-bottom: 4px;
+  }
+  .advantages__item {
+    min-height: 95px;
+    /* Временно для сетки */
+    margin: 0 30px;
+    margin-bottom: 40px;
+    padding: 0;
+    padding-bottom: 39px;
+    padding-left: 128px;
+  }
+  .advantages__item:nth-child(n+2) {
+    display: block;
+  }
+  .advantages__item:last-child {
+    margin-bottom: 0;
+  }
+}
+@media (min-width: 1200px) {
+  .advantages__wrapper {
+    min-height: 275px;
+    /* Временно для сетки */
+    padding-top: 75px;
+    padding-bottom: 59px;
+  }
+  .advantages__items {
+    display: table;
+    width: 100%;
+    height: 275px;
+    /* Времено для сетки (таблица не воспринимает min-height) */
+  }
+  .advantages__item {
+    display: table-cell;
+    width: 240px;
+    margin: 0;
+    padding: 0 40px;
+    padding-top: 130px;
+  }
+  .advantages__item:nth-child(n+2) {
+    display: table-cell;
+  }
+  .advantages__item:nth-child(2) {
+    width: 200px;
+    padding-left: 60px;
+    padding-right: 60px;
   }
 }
