--- a/app/less/style.less
+++ b/app/less/style.less
@@ -4,3 +4,5 @@
 @import "outlines.less";
 @import "blocks/page-header.less";
 @import "blocks/main-nav.less";
+@import "blocks/stats.less";
+@import "blocks/advantages.less";
