--- a/app/less/blocks/page-header.less
+++ b/app/less/blocks/page-header.less
@@ -1,19 +1,23 @@
 .page-header {
-	min-height: 395px; /* временно для сетки */
-  background-color: red; /* временно для сетки */
+	/*min-height: 395px;  временно для сетки */
 }
 
 .page-header__logo {
 	height: 85px;
-  background-color: green; /* временно для сетки */
+  text-align: center;
 }
 
+.page-header__logo img {
+  width: 230px;
+  height: 85px;
+}
 
 @media @tablet-widths {
   .page-header {
     position: relative;
     min-height: 70px; /* минимальная высота содержания */
     padding-bottom: 400px;
+    background-color: #000000;
   }
 
   .page-header__logo {
@@ -21,6 +25,19 @@
     bottom: 0;
     width: 100%;
     height: 400px;
+    background-color: #000000;
+    background-image: url("../img/bg-header.jpg");
+    background-repeat: no-repeat;
+    background-position: center -9px;
+  }
+
+  .page-header__logo img {
+    position: absolute;
+    bottom: 257px;
+    left: 50%;
+    width: 370px;
+    height: auto;
+    transform: translateX(-50%);
   }
 }
 
@@ -31,5 +48,11 @@
 
   .page-header__logo {
     height: 648px;
+    background-position: center 0px;
+    background-size: cover;
+  }
+
+  .page-header__logo img {
+    bottom: 438px;
   }
 }
