--- a/app/css/style.css
+++ b/app/css/style.css
@@ -2,13 +2,13 @@
   font-weight: normal;
   font-family: "PT Sans Narrow";
   font-style: normal;
-  src: url("fonts/PTSansNarrow.woff2") format("woff2"), url("fonts/PTSansNarrow.woff") format("woff");
+  src: url("../fonts/PTSansNarrow/PTSansNarrow.woff2") format("woff2"), url("../fonts/PTSansNarrow/PTSansNarrow.woff") format("woff");
 }
 @font-face {
   font-weight: 700;
   font-family: "PT Sans Narrow";
   font-style: normal;
-  src: url("fonts/PTSansNarrowBold.woff2") format("woff2"), url("fonts/PTSansNarrowBold.woff") format("woff");
+  src: url("../fonts/PTSansNarrowBold/PTSansNarrowBold.woff2") format("woff2"), url("../fonts/PTSansNarrowBold/PTSansNarrowBold.woff") format("woff");
 }
 body {
   font-size: 18px;
@@ -103,7 +103,7 @@ body {
 .main-nav {
   position: relative;
   width: 320px;
-  min-height: 50px;
+  min-height: 51px;
   margin: 0 auto;
   background-color: #826550;
 }
@@ -256,12 +256,32 @@ body {
     height: 100%;
     box-shadow: inset 4px 0 7px -2px rgba(0, 0, 0, 0.4);
   }
+  .main-nav--nojs .main-nav__toggle {
+    display: none;
+  }
+  .main-nav--nojs .main-nav__wrapper {
+    position: static;
+    height: auto;
+  }
+  .main-nav--nojs .main-nav__item {
+    display: block;
+  }
+  .main-nav--nojs .main-nav__item--active a {
+    padding-right: 21px;
+    padding-left: 21px;
+    text-align: left;
+  }
+  .main-nav--nojs .main-nav__user-items {
+    display: block;
+    background-color: #6a4d38;
+  }
 }
 @media (min-width: 768px) {
   .main-nav {
     width: auto;
     min-height: 70px;
     margin: 0;
+    background-color: #000000;
   }
   .main-nav__wrapper {
     width: 320px;
@@ -272,17 +292,69 @@ body {
     display: table;
     clear: both;
   }
+  .main-nav__toggle {
+    display: none;
+  }
   .main-nav__items {
     float: left;
     width: 570px;
-    min-height: 70px;
-    /* Временно для сетки */
   }
   .main-nav__user-items {
     float: right;
     width: 60px;
-    min-height: 70px;
-    /* Временно для сетки */
+  }
+  .main-nav__item {
+    float: left;
+    margin-right: 32px;
+  }
+  .main-nav__item:last-child {
+    margin-right: 0;
+  }
+  .main-nav__item--active {
+    position: relative;
+  }
+  .main-nav__item--active::after {
+    content: "";
+    position: absolute;
+    right: 0;
+    bottom: -3px;
+    left: 0;
+    height: 3px;
+    background: #826550;
+  }
+  .main-nav__item a {
+    padding: 0;
+    padding-top: 25px;
+    padding-bottom: 23px;
+    background: none;
+    border: none;
+  }
+  .main-nav__item a[href]:hover {
+    color: #826550;
+    background-color: black;
+  }
+  .main-nav__item a[href]:active {
+    color: #ffffff;
+    background-color: black;
+    opacity: 0.3;
+  }
+  .main-nav__user-login {
+    width: 60px;
+    height: 70px;
+    padding: 0;
+    font-size: 0;
+  }
+  .main-nav__user-login::before {
+    top: 29px;
+    left: 12px;
+  }
+  .main-nav__user-login:hover::before {
+    background-position: -10px -276px;
+    opacity: 1;
+  }
+  .main-nav__user-login:active::before {
+    background-position: -10px -204px;
+    opacity: 0.3;
   }
 }
 @media (min-width: 768px) and (min-width: 768px) {
@@ -298,6 +370,26 @@ body {
 @media (min-width: 1200px) {
   .main-nav__items {
     width: 780px;
+  }
+  .main-nav__item {
+    margin-right: 0;
+  }
+  .main-nav__item--active::after {
+    right: 30px;
+    left: 30px;
+  }
+  .main-nav__item a {
+    padding-right: 31px;
+    padding-left: 31px;
+  }
+  .main-nav__item a[href]:hover {
+    color: #000000;
+    background-color: #ffffff;
+  }
+  .main-nav__item a[href]:active {
+    color: rgba(0, 0, 0, 0.3);
+    background-color: #ffffff;
+    opacity: 1;
   }
   .main-nav__user-items {
     width: 160px;
