--- a/app/less/blocks/main-nav.less
+++ b/app/less/blocks/main-nav.less
@@ -1,7 +1,7 @@
 .main-nav {
   position: relative;
   width: 320px;
-  min-height: 50px;
+  min-height: 51px;
   margin: 0 auto;
   background-color: #826550;
 }
@@ -181,6 +181,30 @@
     height: 100%;
     box-shadow: inset 4px 0 7px -2px rgba(0, 0, 0, 0.4);
   }
+
+  .main-nav--nojs .main-nav__toggle {
+    display: none;
+  }
+
+  .main-nav--nojs .main-nav__wrapper {
+    position: static;
+    height: auto;
+  }
+
+  .main-nav--nojs .main-nav__item {
+    display: block;
+  }
+
+  .main-nav--nojs .main-nav__item--active a {
+    padding-right: 21px;
+    padding-left: 21px;
+    text-align: left;
+  }
+
+  .main-nav--nojs .main-nav__user-items {
+    display: block;
+    background-color: #6a4d38;
+  }
 }
 
 @media @tablet-widths {
@@ -188,6 +212,7 @@
     width: auto;
     min-height: 70px;
     margin: 0;
+    background-color: #000000;
   }
 
   .main-nav__wrapper {
@@ -195,22 +220,117 @@
     .clearfix();
   }
 
+  .main-nav__toggle {
+    display: none;
+  }
+
   .main-nav__items {
     float: left;
     width: 570px;
-    min-height: 70px; /* Временно для сетки */
   }
 
   .main-nav__user-items {
     float: right;
     width: 60px;
-    min-height: 70px; /* Временно для сетки */
+  }
+
+  .main-nav__item {
+    float: left;
+    margin-right: 32px;
+
+    &:last-child {
+      margin-right: 0;
+    }
+
+    &--active {
+      position: relative;
+
+      &::after {
+        content: "";
+        position: absolute;
+        right: 0;
+        bottom: -3px;
+        left: 0;
+        height: 3px;
+        background: #826550;
+      }
+    }
+  }
+
+  .main-nav__item a {
+    padding: 0;
+    padding-top: 25px;
+    padding-bottom: 23px;
+    background: none;
+    border: none;
+  }
+
+  .main-nav__item a[href] {
+    &:hover {
+      color: #826550;
+      background-color: black;
+    }
+
+    &:active {
+      color: #ffffff;
+      background-color: black;
+      opacity: 0.3;
+    }
+  }
+
+  .main-nav__user-login {
+    width: 60px;
+    height: 70px;
+    padding: 0;
+    font-size: 0;
+
+    &::before {
+      top: 29px;
+      left: 12px;
+    }
+
+    &:hover::before {
+      background-position: -10px -276px;
+      opacity: 1;
+    }
+
+    &:active::before {
+      background-position: -10px -204px;
+      opacity: 0.3;
+    }
   }
 }
 
 @media @desktop-widths {
   .main-nav__items {
     width: 780px;
+  }
+
+  .main-nav__item {
+    margin-right: 0;
+
+    &--active::after {
+      right: 30px;
+      left: 30px;
+    }
+  }
+
+  .main-nav__item a {
+    padding-right: 31px;
+    padding-left: 31px;
+  }
+
+  .main-nav__item a[href] {
+    &:hover {
+      color: #000000;
+      background-color: #ffffff;
+    }
+
+    &:active {
+      color: rgba(0, 0, 0, 0.3);
+      background-color: #ffffff;
+      opacity: 1;
+    }
   }
 
   .main-nav__user-items {
