--- a/app/css/style.css
+++ b/app/css/style.css
@@ -392,7 +392,37 @@ body {
     opacity: 1;
   }
   .main-nav__user-items {
-    width: 160px;
+    width: auto;
+    max-width: 160px;
+  }
+  .main-nav__user-login {
+    position: relative;
+    width: auto;
+    height: auto;
+    padding: 25px 30px 23px 50px;
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 24px;
+    text-transform: uppercase;
+    text-decoration: none;
+  }
+  .main-nav__user-login:hover {
+    color: #000000;
+    background-color: #ffffff;
+  }
+  .main-nav__user-login:active {
+    color: rgba(0, 0, 0, 0.3);
+    background-color: #ffffff;
+  }
+  .main-nav__user-login:hover::before {
+    background-position: -10px -276px;
+  }
+  .main-nav__user-login:active::before {
+    background-position: -10px -276px;
+    opacity: 0.1;
+  }
+  .main-nav__user-login::before {
+    left: 15px;
   }
 }
 .stats {
