--- a/app/less/blocks/main-nav.less
+++ b/app/less/blocks/main-nav.less
@@ -334,6 +334,42 @@
   }
 
   .main-nav__user-items {
-    width: 160px;
+    width: auto;
+    max-width: 160px;
+  }
+
+  .main-nav__user-login {
+    position: relative;
+    width: auto;
+    height: auto;
+    padding: 25px 30px 23px 50px;
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 24px;
+    text-transform: uppercase;
+    text-decoration: none;
+
+    &:hover {
+      color: #000000;
+      background-color: #ffffff;
+    }
+
+    &:active {
+      color: rgba(0, 0, 0, 0.3);
+      background-color: #ffffff;
+    }
+
+    &:hover::before {
+      background-position: -10px -276px;
+    }
+
+    &:active::before {
+      background-position: -10px -276px;
+      opacity: 0.1;
+    }
+  }
+
+  .main-nav__user-login::before {
+    left: 15px;
   }
 }
