--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,3 +1,15 @@
+.container-fluid {
+  width: auto;
+}
+@media (min-width: 768px) {
+  .container-fluid {
+    width: 84%;
+    /* 640px / 768px ~= 84% */
+    max-width: 960px;
+    /* 960px / .84 ~= 1142px (центровка начнется чуть раньше 1200px) */
+    margin: 0 auto;
+  }
+}
 @font-face {
   font-weight: normal;
   font-family: "PT Sans Narrow";
@@ -62,15 +74,19 @@ body {
 }
 @media (min-width: 768px) {
   .page-header {
-    position: relative;
-    min-height: 70px;
+    /*position: relative;*/
+    display: flex;
+    flex-direction: column;
+    min-height: 0;
     /* минимальная высота содержания */
-    padding-bottom: 400px;
+    /*padding-bottom: 400px;*/
     background-color: #000000;
   }
   .page-header__logo {
-    position: absolute;
-    bottom: 0;
+    order: 2;
+    /*position: absolute;
+    bottom: 0;*/
+    position: relative;
     width: 100%;
     height: 400px;
     background-color: #000000;
@@ -89,7 +105,7 @@ body {
 }
 @media (min-width: 1200px) {
   .page-header {
-    padding-bottom: 648px;
+    /*padding-bottom: 648px;*/
   }
   .page-header__logo {
     height: 648px;
@@ -102,9 +118,10 @@ body {
 }
 .main-nav {
   position: relative;
-  width: 320px;
-  min-height: 51px;
-  margin: 0 auto;
+  /*width: 320px;*/
+  width: auto;
+  min-height: 50px;
+  /*margin: 0 auto;*/
   background-color: #826550;
 }
 .main-nav__toggle {
@@ -284,27 +301,27 @@ body {
     background-color: #000000;
   }
   .main-nav__wrapper {
-    width: 320px;
-    margin: 0 auto;
-  }
-  .main-nav__wrapper::after {
-    content: "";
-    display: table;
-    clear: both;
+    width: auto;
+    /*.clearfix();*/
+    display: flex;
+    justify-content: space-between;
   }
   .main-nav__toggle {
     display: none;
   }
   .main-nav__items {
-    float: left;
-    width: 570px;
+    /*float: left;*/
+    /*width: 570px;*/
+    display: flex;
+    flex-wrap: wrap;
+    flex-grow: 1;
   }
   .main-nav__user-items {
-    float: right;
+    /*float: right;*/
     width: 60px;
   }
   .main-nav__item {
-    float: left;
+    /*float: left;*/
     margin-right: 32px;
   }
   .main-nav__item:last-child {
@@ -359,17 +376,16 @@ body {
 }
 @media (min-width: 768px) and (min-width: 768px) {
   .main-nav__wrapper {
-    width: 640px;
-  }
-}
-@media (min-width: 768px) and (min-width: 1200px) {
-  .main-nav__wrapper {
-    width: 960px;
+    width: 84%;
+    /* 640px / 768px ~= 84% */
+    max-width: 960px;
+    /* 960px / .84 ~= 1142px (центровка начнется чуть раньше 1200px) */
+    margin: 0 auto;
   }
 }
 @media (min-width: 1200px) {
   .main-nav__items {
-    width: 780px;
+    /*width: 780px;*/
   }
   .main-nav__item {
     margin-right: 0;
