--- a/app/less/blocks/main-nav.less
+++ b/app/less/blocks/main-nav.less
@@ -1,8 +1,9 @@
 .main-nav {
   position: relative;
-  width: 320px;
-  min-height: 51px;
-  margin: 0 auto;
+  /*width: 320px;*/
+  width: auto;
+  min-height: 50px;
+  /*margin: 0 auto;*/
   background-color: #826550;
 }
 
@@ -216,8 +217,11 @@
   }
 
   .main-nav__wrapper {
-    .container();
-    .clearfix();
+    .container-fluid();
+    /*.clearfix();*/
+
+    display: flex;
+    justify-content: space-between;
   }
 
   .main-nav__toggle {
@@ -225,17 +229,21 @@
   }
 
   .main-nav__items {
-    float: left;
-    width: 570px;
+    /*float: left;*/
+    /*width: 570px;*/
+    
+    display: flex;
+    flex-wrap: wrap;
+    flex-grow: 1;
   }
 
   .main-nav__user-items {
-    float: right;
+    /*float: right;*/
     width: 60px;
   }
 
   .main-nav__item {
-    float: left;
+    /*float: left;*/
     margin-right: 32px;
 
     &:last-child {
@@ -303,7 +311,7 @@
 
 @media @desktop-widths {
   .main-nav__items {
-    width: 780px;
+    /*width: 780px;*/
   }
 
   .main-nav__item {
