--- a/app/less/blocks/page-header.less
+++ b/app/less/blocks/page-header.less
@@ -14,15 +14,22 @@
 
 @media @tablet-widths {
   .page-header {
-    position: relative;
-    min-height: 70px; /* минимальная высота содержания */
-    padding-bottom: 400px;
+    /*position: relative;*/
+
+    display: flex;
+    flex-direction: column;
+    min-height: 0; /* минимальная высота содержания */
+    /*padding-bottom: 400px;*/
     background-color: #000000;
   }
 
   .page-header__logo {
-    position: absolute;
-    bottom: 0;
+    order: 2;
+
+    /*position: absolute;
+    bottom: 0;*/
+
+    position: relative;
     width: 100%;
     height: 400px;
     background-color: #000000;
@@ -43,7 +50,7 @@
 
 @media @desktop-widths {
   .page-header {
-    padding-bottom: 648px;
+    /*padding-bottom: 648px;*/
   }
 
   .page-header__logo {
