--- a/app/less/mixins.less
+++ b/app/less/mixins.less
@@ -19,6 +19,16 @@
   }
 }
 
+.container-fluid {
+  width: auto;
+
+  @media @tablet-widths {
+    width: 84%; /* 640px / 768px ~= 84% */
+    max-width: 960px; /* 960px / .84 ~= 1142px (центровка начнется чуть раньше 1200px) */
+    margin: 0 auto;
+  }
+}
+
 .no-outline() {
   outline: none;
   background: transparent;
