--- a/app/less/blocks/stats.less
+++ b/app/less/blocks/stats.less
@@ -1,5 +1,5 @@
 .stats {
-	.container();
+	.container-fluid();
 }
 
 .stats__header {
@@ -105,11 +105,12 @@
   }
 
   .stats__header {
-    .clearfix();
+    /*.clearfix();*/
     position: relative;
-    min-height: 129px;
-    padding: 0;
-    padding-top: 31px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    padding: 31px 40px;
     padding-bottom: 24px;
 
     &::before {
@@ -124,9 +125,10 @@
   }
 
   .stats__slogan {
-    float: left;
-    width: 280px;
-    padding-left: 40px;
+    width: 50%;
+    /*float: left;*/
+    /*width: 280px;*/
+    /*padding-left: 40px;*/
     margin-bottom: 20px;
     font-size: 40px;
     line-height: 40px;
@@ -135,20 +137,23 @@
   }
 
   .stats__intro {
-    float: right;
-    width: 210px;
+    /*float: right;*/
+    /*width: 210px;*/
+    width: 37.5%;
     padding: 0;
+    padding-left: 30px;
     padding-top: 4px;
-    padding-right: 80px;
+    /*padding-right: 80px;*/
     text-align: left;
   }
 
   .stats__legend--top {
     display: block;
-    float: left;
-    clear: left;
-    width: 280px;
-    padding-left: 40px;
+    width: 50%;
+    /*float: left;*/
+    /*clear: left;*/
+    /*width: 280px;*/
+    /*padding-left: 40px;*/
     color: rgba(0, 0, 0, 0.3);
   }
 
@@ -157,14 +162,21 @@
   }
 
   .stats__items {
-    .clearfix();
+    /*.clearfix();*/
     display: block;
+  }
+
+  .stats__items tbody {
+    display: flex;
+    flex-wrap: wrap;
   }
 
   .stats__items tr {
     display: block;
-    float: left;
-    width: 250px;
+    /*float: left;*/
+    /*width: 250px;*/
+    width: 50%;
+    box-sizing: border-box;
     padding: 25px 35px;
     padding-bottom: 28px;
   }
@@ -195,12 +207,14 @@
 
 @media @desktop-widths {
   .stats {
-    .clearfix();
+    /*.clearfix();*/
+    display: flex;
     margin-top: -159px;
   }
 
   .stats__header {
-    float: left;
+    /*float: left;*/
+    flex-direction: column;
     width: 240px;
     min-height: 263px; /* Времено для сетки */
     padding-left: 40px;
@@ -212,28 +226,30 @@
   }
 
   .stats__slogan {
-    float: none;
+    /*float: none;*/
     width: auto;
     margin-bottom: 42px;
-    padding-left: 0;
+    /*padding-left: 0;*/
   }
 
   .stats__intro {
-    float: none;
+    /*float: none;*/
     width: auto;
     margin-bottom: 32px;
     padding: 0;
   }
 
   .stats__legend--top {
-    float: none;
+    /*float: none;*/
     width: auto;
-    padding-left: 0;
+    /*padding-left: 0;*/
+    margin-top: auto;
   }
 
   .stats__items {
-    float: left;
-    dispaly: block;
+    /*float: left;*/
+    /*dispaly: block;*/
+    display: flex;
     width: 640px;
   }
 }
