--- a/app/css/style.css
+++ b/app/css/style.css
@@ -90,7 +90,7 @@ body {
     width: 100%;
     height: 400px;
     background-color: #000000;
-    background-image: url("../img/bg-header.jpg");
+    background-image: url("../img/bg-tablet-inner.jpg");
     background-repeat: no-repeat;
     background-position: center -9px;
   }
@@ -101,6 +101,13 @@ body {
     width: 370px;
     height: auto;
     transform: translateX(-50%);
+  }
+}
+@media (min-width: 768px) and (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
+  .page-header__logo {
+    background-image: url("../img/bg-desktop-inner.jpg");
+    /* Типо размер в два раза больше у картинки, которая будет подгружаться на ретиновые экраны */
+    background-size: 1338px auto;
   }
 }
 @media (min-width: 1200px) {
@@ -120,7 +127,7 @@ body {
   position: relative;
   /*width: 320px;*/
   width: auto;
-  min-height: 50px;
+  min-height: 51px;
   /*margin: 0 auto;*/
   background-color: #826550;
 }
@@ -1018,5 +1025,337 @@ body {
     width: 140px;
     height: 140px;
     transform: translateY(0) translateX(-50%);
+  }
+}
+.works-list {
+  position: relative;
+  padding-bottom: 14px;
+}
+.works-list::after {
+  content: "";
+  position: absolute;
+  right: 0;
+  bottom: -34px;
+  z-index: 10;
+  width: 100%;
+  height: 34px;
+  background-image: linear-gradient(to top right, transparent 50%, #f8f5f2 50%), linear-gradient(to top left, transparent 50%, #f8f5f2 50%);
+  background-repeat: no-repeat;
+  background-position: 0 0, 100% 0;
+  background-size: 50.1% 100%;
+}
+@media (min-width: 768px) {
+  .works-list__wrapper {
+    padding: 0 64px;
+  }
+}
+@media (min-width: 1200px) {
+  .works-list__wrapper {
+    width: 320px;
+    margin: 0 auto;
+  }
+  .works-list {
+    padding-bottom: 47px;
+  }
+  .works-list::after {
+    display: none;
+  }
+  .works-list__wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+}
+@media (min-width: 1200px) and (min-width: 768px) {
+  .works-list__wrapper {
+    width: 640px;
+  }
+}
+@media (min-width: 1200px) and (min-width: 1200px) {
+  .works-list__wrapper {
+    width: 960px;
+  }
+}
+.works-item {
+  margin-bottom: 20px;
+  padding: 0 20px;
+  color: #000000;
+}
+.works-item--work-of-month {
+  position: relative;
+}
+.works-item--work-of-month::before {
+  content: "Работа месяца";
+  position: absolute;
+  top: 401px;
+  left: 20px;
+  z-index: 2;
+  width: 140px;
+  padding: 15px 11px 15px 16px;
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 20px;
+  text-align: center;
+  color: #ffffff;
+  text-transform: uppercase;
+  background-color: #826550;
+}
+.works-item--work-of-month::after {
+  content: "";
+  position: absolute;
+  top: 401px;
+  left: 180px;
+  z-index: 2;
+  width: 16px;
+  height: 50px;
+  background-image: linear-gradient(to top left, transparent 50%, #826550 50%), linear-gradient(to top right, #826550 50%, transparent 50%);
+}
+.works-item__img-wrapper {
+  line-height: 0;
+  position: relative;
+  height: 176px;
+  overflow: hidden;
+  text-align: center;
+  background-color: #e6ded6;
+}
+.works-item--work-of-month .works-item__img-wrapper {
+  height: 480px;
+}
+.works-item__review {
+  padding: 19px 21px 0;
+  border: 1px solid #e5ddd5;
+  border-top: none;
+}
+.works-item__title {
+  margin-top: 0;
+  margin-bottom: 14px;
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 27px;
+}
+.works-item__blockquote {
+  margin: 0;
+  margin-bottom: 16px;
+}
+.works-item__parameter-list {
+  display: flex;
+  flex-wrap: wrap;
+}
+.works-item__parameter-item {
+  position: relative;
+  width: auto;
+  margin-bottom: 15px;
+  margin-right: 30px;
+  padding-left: 36px;
+  font-size: 16px;
+  text-transform: uppercase;
+}
+.works-item__parameter-item::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 0;
+  width: 45px;
+  height: 21px;
+  background-repeat: no-repeat;
+  background-position: center center;
+  transform: translate(-30%, -50%);
+}
+.works-item__parameter-item--haircut::before {
+  background-image: url("../img/scissors-icon.svg");
+}
+.works-item__parameter-item--shaving::before {
+  background-image: url("../img/beard-icon.svg");
+}
+.works-item__parameter-item--mustache::before {
+  background-image: url("../img/mustache-icon.svg");
+}
+@media (min-width: 768px) {
+  .works-item {
+    display: flex;
+    align-items: stretch;
+    margin-bottom: 41px;
+    padding: 0;
+  }
+  .works-item--work-of-month::before {
+    top: 35px;
+    bottom: auto;
+    left: 0;
+  }
+  .works-item--work-of-month::after {
+    top: 35px;
+    bottom: auto;
+    left: 160px;
+  }
+  .works-item__img-wrapper,
+  .works-item--work-of-month .works-item__img-wrapper {
+    height: auto;
+  }
+  .works-item__img-wrapper {
+    position: relative;
+    width: 270px;
+  }
+  .works-item__img-wrapper::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 0;
+    width: calc(100% - 1px);
+    height: calc(100% - 1px);
+    border: 1px solid #e5ddd5;
+    border-top: none;
+    border-right: none;
+  }
+  .works-item__img {
+    position: relative;
+    z-index: 1;
+  }
+  .works-item__review {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: calc(100% - 370px);
+    padding: 43px 50px 20px;
+    border-top: 1px solid #e5ddd5;
+    border-left: none;
+  }
+  .works-item__title {
+    margin-bottom: 26px;
+  }
+}
+@media (min-width: 1200px) {
+  .works-item {
+    margin-bottom: 41px;
+  }
+  .works-item:first-child .works-item__img-wrapper {
+    width: 480px;
+  }
+  .works-item:first-child .works-item__review {
+    width: 396px;
+    padding: 128px 42px 12px;
+  }
+  .works-item:first-child .works-item__parameter-item {
+    margin-bottom: 15px;
+  }
+  .works-item--work-of-month::before {
+    top: 25px;
+    right: 0;
+    bottom: auto;
+    left: auto;
+  }
+  .works-item--work-of-month::after {
+    top: 25px;
+    right: 160px;
+    bottom: auto;
+    left: auto;
+    background-image: linear-gradient(to top left, #826550 50%, transparent 50%), linear-gradient(to top right, transparent 50%, #826550 50%);
+  }
+  .works-item:not(:first-child) {
+    flex-direction: column;
+    width: 293px;
+  }
+  .works-item:nth-child(3n + 1) {
+    margin-right: 0;
+  }
+  .works-item__img-wrapper {
+    width: auto;
+  }
+  .works-item__review {
+    flex-grow: 1;
+    width: auto;
+  }
+  .works-item:not(:first-child) .works-item__review {
+    padding: 30px 35px 10px;
+    border-top: none;
+    border-left: 1px solid #e5ddd5;
+  }
+  .works-item__blockquote {
+    margin-bottom: 25px;
+  }
+  .works-item__parameter-item {
+    width: auto;
+    margin-right: 30px;
+    margin-bottom: 21px;
+  }
+}
+.page-main--inner {
+  color: black;
+  background-color: #f8f5f2;
+}
+@media (min-width: 768px) {
+  .page-main {
+    padding-top: 27px;
+  }
+}
+.page-title {
+  padding: 28px 0 30px;
+  color: #000000;
+  text-transform: uppercase;
+}
+.page-title__wrapper {
+  width: 320px;
+  margin: 0 auto;
+  position: relative;
+}
+@media (min-width: 768px) {
+  .page-title__wrapper {
+    width: 640px;
+  }
+}
+@media (min-width: 1200px) {
+  .page-title__wrapper {
+    width: 960px;
+  }
+}
+.page-title__text {
+  margin: 0;
+  font-weight: bold;
+  font-size: 30px;
+  line-height: 30px;
+  text-align: center;
+}
+.page-title__to-main {
+  display: none;
+}
+@media (min-width: 768px) {
+  .page-title__wrapper {
+    width: auto;
+    padding: 0 64px;
+  }
+  .page-title {
+    margin-bottom: 15px;
+    padding: 30px 0;
+  }
+  .page-title__to-main {
+    position: absolute;
+    top: 0;
+    right: 64px;
+    display: block;
+  }
+  .page-title__text {
+    font-size: 40px;
+    line-height: 40px;
+    text-align: left;
+  }
+}
+@media (min-width: 1200px) {
+  .page-title {
+    margin-bottom: 57px;
+    padding: 29px 0;
+  }
+  .page-title__wrapper {
+    width: 320px;
+    margin: 0 auto;
+  }
+}
+@media (min-width: 1200px) and (min-width: 768px) {
+  .page-title__wrapper {
+    width: 640px;
+  }
+}
+@media (min-width: 1200px) and (min-width: 1200px) {
+  .page-title__wrapper {
+    width: 960px;
   }
 }
