--- a/app/less/blocks/page-header.less
+++ b/app/less/blocks/page-header.less
@@ -33,9 +33,14 @@
     width: 100%;
     height: 400px;
     background-color: #000000;
-    background-image: url("../img/bg-header.jpg");
+    background-image: url("../img/bg-tablet-inner.jpg");
     background-repeat: no-repeat;
     background-position: center -9px;
+
+    @media @retina {
+      background-image: url("../img/bg-desktop-inner.jpg"); /* Типо размер в два раза больше у картинки, которая будет подгружаться на ретиновые экраны */
+      background-size: 1338px auto;
+    }
   }
 
   .page-header__logo img {
