--- a/app/less/style.less
+++ b/app/less/style.less
@@ -8,3 +8,7 @@
 @import "blocks/advantages.less";
 @import "blocks/news.less";
 @import "blocks/price.less";
+@import "blocks/works-list.less";
+@import "blocks/works-item.less";
+@import "blocks/page-main.less";
+@import "blocks/page-title.less";
